Fix Overflow part 1.5

--- a/style.css
+++ b/style.css
@@ -10,8 +10,12 @@ background: linear-gradient(75deg, rgba(255,240,164,1) 0%, rgba(241,104,150,1) 3
 
 .hero {
     background-color: #ffffff;
-    border-radius: 20px;
+    border-radius: 25px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 1);
+}
+
+#Description{
+    font-size: 20px;
 }
 
 .skills-project-items{
@@ -48,6 +52,10 @@ background: linear-gradient(75deg, rgba(255,240,164,1) 0%, rgba(241,104,150,1) 3
         height: 330px;
         overflow-x: hidden;
     }
+
+    #Description{
+        font-size: 15px;
+    }
 }
 
 @media (max-width: 576px) {
@@ -61,5 +69,9 @@ background: linear-gradient(75deg, rgba(255,240,164,1) 0%, rgba(241,104,150,1) 3
         width: 400px;
         height: 230px;
         overflow-x: hidden;
+    }
+
+    #Description{
+        font-size: 10px;
     }
 }
